--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -2236,7 +2236,7 @@
     <value>Prevu minimieren</value>
   </data>
   <data name="CLOSE PREVU" xml:space="preserve">
-    <value>Schließen Sie Zurück</value>
+    <value>Schließen Sie Prevu</value>
   </data>
   <data name="OVERWRITE THE FOLLOWING IMAGE?" xml:space="preserve">
     <value>Das folgende Bild überschreiben?</value>
@@ -3763,7 +3763,7 @@
     <value>Sicherungskasten</value>
   </data>
   <data name="PREVIERO READY TO RECEIVE" xml:space="preserve">
-    <value>Präsidento bereit zu erhalten</value>
+    <value>Previero bereit zu erhalten</value>
   </data>
   <data name="COOLING WATER" xml:space="preserve">
     <value>Kühlendes Wasser</value>
