--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -2347,10 +2347,10 @@
     <value>Ventana de depuración</value>
   </data>
   <data name="MINIMIZE PREVU" xml:space="preserve">
-    <value>Minimizar anterior</value>
+    <value>Minimizar Prevu</value>
   </data>
   <data name="CLOSE PREVU" xml:space="preserve">
-    <value>Cerrar Anterior</value>
+    <value>Cerrar Prevu</value>
   </data>
   <data name="OVERWRITE THE FOLLOWING IMAGE?" xml:space="preserve">
     <value>¿Sobrescribir la siguiente imagen?</value>
