--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -3463,10 +3463,10 @@
     <value>Sorema Ok A Ricevere</value>
   </data>
   <data name="WAITING FOR SOREMA PLANT TO BE READY TO RECEIVE" xml:space="preserve">
-    <value>In Attesa Che La Pianta Del Sorema Sia Pronta A Ricevere</value>
+    <value>In Attesa Che L'impianto Sorema Sia Pronto A Ricevere</value>
   </data>
   <data name="SOREMA PLANT IS NOT OK TO RECEIVE" xml:space="preserve">
-    <value>L'Impianto Di Sorema Non È Ok Per Ricevere</value>
+    <value>L'Impianto Sorema Non È Ok Per Ricevere</value>
   </data>
   <data name="LOCAL DISCONNECT CLOSED" xml:space="preserve">
     <value>Disconnessione Locale Chiusa</value>
@@ -3745,7 +3745,7 @@
     <value>Minimizzare</value>
   </data>
   <data name="CUBEDICER" xml:space="preserve">
-    <value>Cubedicer</value>
+    <value>Cubettatrice</value>
   </data>
   <data name="CONFIGURATION" xml:space="preserve">
     <value>Configurazione</value>
@@ -3763,7 +3763,7 @@
     <value>Quadro elettrico</value>
   </data>
   <data name="PREVIERO READY TO RECEIVE" xml:space="preserve">
-    <value>Prevenro pronto a ricevere</value>
+    <value>Previero pronto a ricevere</value>
   </data>
   <data name="COOLING WATER" xml:space="preserve">
     <value>Acqua di raffreddamento</value>
@@ -4027,7 +4027,7 @@
     <value>Controlla l'impianto esterno per renderlo pronto a dare di nuovo il materiale</value>
   </data>
   <data name="INFO_SOREMA_OK_1" xml:space="preserve">
-    <value>Aspetta che Sorema Plant si prepara a ricevere materiale</value>
+    <value>Aspetta che l'Impianto Sorema sia pronto a ricevere materiale</value>
   </data>
   <data name="INFO_EXT_2" xml:space="preserve">
     <value>Controllare il sistema esterno per renderlo pronto per il processo</value>
