--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -2221,7 +2221,7 @@
     <value>Referência de produção</value>
   </data>
   <data name="SENSOR CALIBRATION REQUIRED BY PREVU PANEL" xml:space="preserve">
-    <value>Calibração do sensor exigida pelo painel PrevU</value>
+    <value>Calibração do sensor exigida pelo painel Prevu</value>
   </data>
   <data name="NO MATERIAL PRESENT" xml:space="preserve">
     <value>Sem material presente</value>
@@ -2440,10 +2440,10 @@
     <value>Janela de depuração</value>
   </data>
   <data name="MINIMIZE PREVU" xml:space="preserve">
-    <value>Minimize o PrevU</value>
+    <value>Minimize o Prevu</value>
   </data>
   <data name="CLOSE PREVU" xml:space="preserve">
-    <value>Fechar Prev</value>
+    <value>Fechar Prevu</value>
   </data>
   <data name="OVERWRITE THE FOLLOWING IMAGE?" xml:space="preserve">
     <value>Substitua a imagem a seguir?</value>
@@ -3529,7 +3529,7 @@
     <value>Esperando a planta de Sorema estar pronta para receber</value>
   </data>
   <data name="SOREMA PLANT IS NOT OK TO RECEIVE" xml:space="preserve">
-    <value>A planta de sorema não está bem para receber</value>
+    <value>A planta de Sorema não está bem para receber</value>
   </data>
   <data name="LOCAL DISCONNECT CLOSED" xml:space="preserve">
     <value>Desconecção local fechada</value>
@@ -3826,7 +3826,7 @@
     <value>Cabine elétrica</value>
   </data>
   <data name="PREVIERO READY TO RECEIVE" xml:space="preserve">
-    <value>Predero pronto para receber</value>
+    <value>Previero pronto para receber</value>
   </data>
   <data name="COOLING WATER" xml:space="preserve">
     <value>Água de refrigeração</value>
