--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -2440,10 +2440,10 @@
     <value>Fereastra de depanare</value>
   </data>
   <data name="MINIMIZE PREVU" xml:space="preserve">
-    <value>Minimizați -l pe Prev</value>
+    <value>Minimizați  pe Prevu</value>
   </data>
   <data name="CLOSE PREVU" xml:space="preserve">
-    <value>Închide prev</value>
+    <value>Închide Prevu</value>
   </data>
   <data name="OVERWRITE THE FOLLOWING IMAGE?" xml:space="preserve">
     <value>Suprascrieți următoarea imagine?</value>
@@ -3232,10 +3232,10 @@
     <value>În aval OK (semnal extern)</value>
   </data>
   <data name="SOREMA PLANT OK TO RECEIVE MATERIAL" xml:space="preserve">
-    <value>Planta sorema ok pentru a primi material</value>
+    <value>Planta Sorema ok pentru a primi material</value>
   </data>
   <data name="(1=SOREMA OK TO RECEIVE)" xml:space="preserve">
-    <value>(1 = sorema ok pentru a primi)</value>
+    <value>(1 = Sorema ok pentru a primi)</value>
   </data>
   <data name="CYCLE INTERLOCKS" xml:space="preserve">
     <value>Cicluri de blocare</value>
