--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -2353,7 +2353,7 @@
     <value>مطحنة خارجية</value>
   </data>
   <data name="WATCHDOG" xml:space="preserve">
-    <value>حراسة</value>
+    <value>Watchdog</value>
   </data>
   <data name="INCREMENTAL WD COUNTER ( +1 EVERY 100 MS - ROLLOVER AT 30000 )" xml:space="preserve">
     <value>عداد وزن إضافي (+1 كل 100 مللي ثانية - تدوير عند 30000)</value>
@@ -4589,5 +4589,128 @@
   </data>
   <data name="POSITION IN PRODUCTION" xml:space="preserve">
     <value>الموقف في الإنتاج</value>
+  </data>
+  <data name="SYS - TV1 - TR Primary" xml:space="preserve">
+    <value>SYS - TV1 - TR Primary</value>
+  </data>
+  <data name="SYS - TV1 - TR Secondary" xml:space="preserve">
+    <value>SYS - TV1 - TR الثانوية</value>
+  </data>
+  <data name="OVERLOAD ANALOG INPUT" xml:space="preserve">
+    <value>الزائد المدخلات التناظرية</value>
+  </data>
+  <data name="OVERLOAD ANALOG OUTPUT" xml:space="preserve">
+    <value>الإخراج التناظري الزائد</value>
+  </data>
+  <data name="OVERLOAD 24V DC INVERTERs" xml:space="preserve">
+    <value>الزائد 24 فولت العاصمة العاصمة</value>
+  </data>
+  <data name="OVERLOAD 24V DC UNDER ESTOP" xml:space="preserve">
+    <value>Overload 24V DC تحت Estop</value>
+  </data>
+  <data name="CABINET COOLING OVERLOAD" xml:space="preserve">
+    <value>خزانة تبريد الزائد</value>
+  </data>
+  <data name="OVERLOAD 24V DC OF ESTOP CIRCUIT" xml:space="preserve">
+    <value>الزائد 24V DC من دائرة ESTOP</value>
+  </data>
+  <data name="Grinder Rotor" xml:space="preserve">
+    <value>طاحونة الدوار</value>
+  </data>
+  <data name="Grinder Safety Key" xml:space="preserve">
+    <value>مفتاح سلامة الطاحونة</value>
+  </data>
+  <data name="Grinder Open Procedure" xml:space="preserve">
+    <value>المطحنة المفتوحة الإجراء</value>
+  </data>
+  <data name="Grinder Hydraulic unit" xml:space="preserve">
+    <value>وحدة الطاحونة الهيدروليكية</value>
+  </data>
+  <data name="Grinder Cooling Water" xml:space="preserve">
+    <value>طاحونة تبريد مياه</value>
+  </data>
+  <data name="Antisticking System" xml:space="preserve">
+    <value>نظام مضاد</value>
+  </data>
+  <data name="Process Group" xml:space="preserve">
+    <value>مجموعة العملية</value>
+  </data>
+  <data name="(1=LINE)" xml:space="preserve">
+    <value>(1 = الخط)</value>
+  </data>
+  <data name="(1=WYE)" xml:space="preserve">
+    <value>(1 = wye)</value>
+  </data>
+  <data name="(1=DELTA)" xml:space="preserve">
+    <value>(1 = دلتا)</value>
+  </data>
+  <data name="GRINDER LOCAL+POWER DISCONNECT OPEN (BOTH)" xml:space="preserve">
+    <value>طاحونة محلية+مفصل الطاقة المفتوح (كلاهما)</value>
+  </data>
+  <data name="Grinder Disconnectors Closed" xml:space="preserve">
+    <value>قطع طاحونة مغلقة</value>
+  </data>
+  <data name="GRINDER SAFETY KEY EXTRACTED FORM THE LOCK" xml:space="preserve">
+    <value>مفتاح سلامة المطحنة المستخرجة من القفل</value>
+  </data>
+  <data name="GRINDER SAFETY KEY UNLOCK COMMAND ACTIVE" xml:space="preserve">
+    <value>أمر فتح مفتاح أمان المطحنة النشط</value>
+  </data>
+  <data name="GRINDER BLADES IN ROTATION" xml:space="preserve">
+    <value>شفرات الطاحونة في التناوب</value>
+  </data>
+  <data name="Grinder in Rotation" xml:space="preserve">
+    <value>طاحونة في الدوران</value>
+  </data>
+  <data name="ANTISTICKING" xml:space="preserve">
+    <value>مكافحة</value>
+  </data>
+  <data name="Antisticking System Not OK" xml:space="preserve">
+    <value>نظام مضاد لا بأس به</value>
+  </data>
+  <data name="INFO_ANTISTIKING_1" xml:space="preserve">
+    <value>تحقق من نظام الانتهاك الخارجي</value>
+  </data>
+  <data name="ANTISTICKING NOT OK" xml:space="preserve">
+    <value>مكافحة لا بأس</value>
+  </data>
+  <data name="Antisticking OK (External Signal)" xml:space="preserve">
+    <value>مكافحة موافق (إشارة خارجية)</value>
+  </data>
+  <data name="(1=ANTISTICKING OK FOR PROCESS)" xml:space="preserve">
+    <value>(1 = موافق موافق للعملية)</value>
+  </data>
+  <data name="*** GROUP FULL PRODUCTION ***" xml:space="preserve">
+    <value>مجموعة الإنتاج الكامل</value>
+  </data>
+  <data name="Calculated Current With No Material" xml:space="preserve">
+    <value>التيار المحسوب بدون مادة</value>
+  </data>
+  <data name="Total Downstream OK in Production" xml:space="preserve">
+    <value>إجمالي المصب موافق في الإنتاج</value>
+  </data>
+  <data name="Total Downstream NOT OK in Production" xml:space="preserve">
+    <value>مجموع المصب ليس موافق في الإنتاج</value>
+  </data>
+  <data name="FEEDING CHANNEL" xml:space="preserve">
+    <value>قناة التغذية</value>
+  </data>
+  <data name="Close Feeding Channel To Start" xml:space="preserve">
+    <value>إغلاق قناة التغذية للبدء</value>
+  </data>
+  <data name="_ESTOP_AREA_RESET_OK" xml:space="preserve">
+    <value>إعادة ضبط المنطقة بشكل موافق</value>
+  </data>
+  <data name="_PLC_NEW_ALARM_SIREN_ON" xml:space="preserve">
+    <value>plc صفارة الإنذار الجديدة على</value>
+  </data>
+  <data name="NEW_ALARM --&gt;SIREN ON (USED TO SHOW STOP-SIREN BUTTON ON HMI)" xml:space="preserve">
+    <value>إنذار جديد-&gt; صفارات الإنذار ON (يستخدم لإظهار زر التوقف على HMI)</value>
+  </data>
+  <data name="INFO_LS_13" xml:space="preserve">
+    <value>تحقق من الموضع المغلق في الصمام والضغط في الأنابيب</value>
+  </data>
+  <data name="INFO_OIL_SEAL_3" xml:space="preserve">
+    <value>إعادة ملء زيت الختم أو المحرك سيتم إيقافه في غضون ساعة واحدة</value>
   </data>
 </root>
