--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -2356,7 +2356,7 @@
     <value>Externe Mühle</value>
   </data>
   <data name="WATCHDOG" xml:space="preserve">
-    <value>Wachhund</value>
+    <value>Watchdog</value>
   </data>
   <data name="INCREMENTAL WD COUNTER ( +1 EVERY 100 MS - ROLLOVER AT 30000 )" xml:space="preserve">
     <value>Inkrementeller Wd-Zähler (+1 alle 100 Ms – Rollover bei 30000)</value>
@@ -3739,7 +3739,7 @@
     <value>Simuliert</value>
   </data>
   <data name="ABOUT" xml:space="preserve">
-    <value>Um</value>
+    <value>Info</value>
   </data>
   <data name="MINIMIZE" xml:space="preserve">
     <value>Minimieren</value>
@@ -4589,5 +4589,128 @@
   </data>
   <data name="POSITION IN PRODUCTION" xml:space="preserve">
     <value>Position in der Produktion</value>
+  </data>
+  <data name="SYS - TV1 - TR Primary" xml:space="preserve">
+    <value>Sys - TV1 - TR Primary</value>
+  </data>
+  <data name="SYS - TV1 - TR Secondary" xml:space="preserve">
+    <value>Sys - TV1 - TR Sekundär</value>
+  </data>
+  <data name="OVERLOAD ANALOG INPUT" xml:space="preserve">
+    <value>Analogeingabe überlasten</value>
+  </data>
+  <data name="OVERLOAD ANALOG OUTPUT" xml:space="preserve">
+    <value>Analogausgang überlasten</value>
+  </data>
+  <data name="OVERLOAD 24V DC INVERTERs" xml:space="preserve">
+    <value>24 V DC Wechselrichter überladen</value>
+  </data>
+  <data name="OVERLOAD 24V DC UNDER ESTOP" xml:space="preserve">
+    <value>24 V DC unter ESTOP überlasten</value>
+  </data>
+  <data name="CABINET COOLING OVERLOAD" xml:space="preserve">
+    <value>Überlastung der Kühlschrank</value>
+  </data>
+  <data name="OVERLOAD 24V DC OF ESTOP CIRCUIT" xml:space="preserve">
+    <value>Überlastung von 24 V Gleichstrom Estop -Schaltung</value>
+  </data>
+  <data name="Grinder Rotor" xml:space="preserve">
+    <value>Mühle Rotor</value>
+  </data>
+  <data name="Grinder Safety Key" xml:space="preserve">
+    <value>Mühle Sicherheitsschlüssel</value>
+  </data>
+  <data name="Grinder Open Procedure" xml:space="preserve">
+    <value>Mühle offene Vorgehensweise</value>
+  </data>
+  <data name="Grinder Hydraulic unit" xml:space="preserve">
+    <value>Schleifhydraulikeinheit</value>
+  </data>
+  <data name="Grinder Cooling Water" xml:space="preserve">
+    <value>Mühle Kühlwasser</value>
+  </data>
+  <data name="Antisticking System" xml:space="preserve">
+    <value>Antisticking -System</value>
+  </data>
+  <data name="Process Group" xml:space="preserve">
+    <value>Prozessgruppe</value>
+  </data>
+  <data name="(1=LINE)" xml:space="preserve">
+    <value>(1 = Linie)</value>
+  </data>
+  <data name="(1=WYE)" xml:space="preserve">
+    <value>(1 = Wye)</value>
+  </data>
+  <data name="(1=DELTA)" xml:space="preserve">
+    <value>(1 = Delta)</value>
+  </data>
+  <data name="GRINDER LOCAL+POWER DISCONNECT OPEN (BOTH)" xml:space="preserve">
+    <value>Mühle lokal+Stromverbindung offen (beide)</value>
+  </data>
+  <data name="Grinder Disconnectors Closed" xml:space="preserve">
+    <value>Schleifschleppschriften geschlossen</value>
+  </data>
+  <data name="GRINDER SAFETY KEY EXTRACTED FORM THE LOCK" xml:space="preserve">
+    <value>Mühle Sicherheitsschlüssel aus dem Schloss extrahiert</value>
+  </data>
+  <data name="GRINDER SAFETY KEY UNLOCK COMMAND ACTIVE" xml:space="preserve">
+    <value>Befehl aktiven Befreiung von Schleifsicherheitsschlüssel aktiv</value>
+  </data>
+  <data name="GRINDER BLADES IN ROTATION" xml:space="preserve">
+    <value>Schleifklingen in der Rotation</value>
+  </data>
+  <data name="Grinder in Rotation" xml:space="preserve">
+    <value>Mühle in der Rotation</value>
+  </data>
+  <data name="ANTISTICKING" xml:space="preserve">
+    <value>Antisticking</value>
+  </data>
+  <data name="Antisticking System Not OK" xml:space="preserve">
+    <value>Antisticking -System nicht in Ordnung</value>
+  </data>
+  <data name="INFO_ANTISTIKING_1" xml:space="preserve">
+    <value>Überprüfen Sie das externe Antisticking -System</value>
+  </data>
+  <data name="ANTISTICKING NOT OK" xml:space="preserve">
+    <value>Antisticking nicht in Ordnung</value>
+  </data>
+  <data name="Antisticking OK (External Signal)" xml:space="preserve">
+    <value>Antisticking OK (externes Signal)</value>
+  </data>
+  <data name="(1=ANTISTICKING OK FOR PROCESS)" xml:space="preserve">
+    <value>(1 = Antisticking OK für den Prozess)</value>
+  </data>
+  <data name="*** GROUP FULL PRODUCTION ***" xml:space="preserve">
+    <value>Gruppe voller Produktion</value>
+  </data>
+  <data name="Calculated Current With No Material" xml:space="preserve">
+    <value>Berechneter Strom ohne Material</value>
+  </data>
+  <data name="Total Downstream OK in Production" xml:space="preserve">
+    <value>Total nachgeschalteter OK in der Produktion</value>
+  </data>
+  <data name="Total Downstream NOT OK in Production" xml:space="preserve">
+    <value>Gesamtstrom nicht in Ordnung in der Produktion</value>
+  </data>
+  <data name="FEEDING CHANNEL" xml:space="preserve">
+    <value>Fütterungskanal</value>
+  </data>
+  <data name="Close Feeding Channel To Start" xml:space="preserve">
+    <value>Fütterungskanal schließen, um zu starten</value>
+  </data>
+  <data name="_ESTOP_AREA_RESET_OK" xml:space="preserve">
+    <value>Estop -Bereich zurücksetzen OK</value>
+  </data>
+  <data name="_PLC_NEW_ALARM_SIREN_ON" xml:space="preserve">
+    <value>SPS neue Alarmsirene auf</value>
+  </data>
+  <data name="NEW_ALARM --&gt;SIREN ON (USED TO SHOW STOP-SIREN BUTTON ON HMI)" xml:space="preserve">
+    <value>Neuer Alarm-&gt; Sirene auf (verwendet, um die Stop-Siren-Taste auf HMI anzuzeigen)</value>
+  </data>
+  <data name="INFO_LS_13" xml:space="preserve">
+    <value>Überprüfen Sie die geschlossene Position und den Druck der Ventil in den Rohren</value>
+  </data>
+  <data name="INFO_OIL_SEAL_3" xml:space="preserve">
+    <value>Nachfüllen des Dichtöls oder des Motors werden innerhalb einer Stunde gestoppt</value>
   </data>
 </root>
