--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -2470,7 +2470,7 @@
     <value>Amoladora externa</value>
   </data>
   <data name="WATCHDOG" xml:space="preserve">
-    <value>Perro guardián</value>
+    <value>Watchdog</value>
   </data>
   <data name="INCREMENTAL WD COUNTER ( +1 EVERY 100 MS - ROLLOVER AT 30000 )" xml:space="preserve">
     <value>Contador Wd incremental (+1 cada 100 ms - rollover en 30000)</value>
@@ -3739,7 +3739,7 @@
     <value>Simulado</value>
   </data>
   <data name="ABOUT" xml:space="preserve">
-    <value>Acerca de</value>
+    <value>Info</value>
   </data>
   <data name="MINIMIZE" xml:space="preserve">
     <value>Minimizar</value>
@@ -4589,5 +4589,128 @@
   </data>
   <data name="POSITION IN PRODUCTION" xml:space="preserve">
     <value>Posición en producción</value>
+  </data>
+  <data name="SYS - TV1 - TR Primary" xml:space="preserve">
+    <value>SYS - TV1 - TR Primario</value>
+  </data>
+  <data name="SYS - TV1 - TR Secondary" xml:space="preserve">
+    <value>SYS - TV1 - TR Secundario</value>
+  </data>
+  <data name="OVERLOAD ANALOG INPUT" xml:space="preserve">
+    <value>Entrada analógica de sobrecarga</value>
+  </data>
+  <data name="OVERLOAD ANALOG OUTPUT" xml:space="preserve">
+    <value>Salida analógica de sobrecarga</value>
+  </data>
+  <data name="OVERLOAD 24V DC INVERTERs" xml:space="preserve">
+    <value>Sobrecarga de 24V DC Inverters</value>
+  </data>
+  <data name="OVERLOAD 24V DC UNDER ESTOP" xml:space="preserve">
+    <value>Sobrecarga de 24V DC bajo impedimento</value>
+  </data>
+  <data name="CABINET COOLING OVERLOAD" xml:space="preserve">
+    <value>Sobrecarga de enfriamiento del gabinete</value>
+  </data>
+  <data name="OVERLOAD 24V DC OF ESTOP CIRCUIT" xml:space="preserve">
+    <value>Sobrecarga de 24 V DC del circuito de estopas</value>
+  </data>
+  <data name="Grinder Rotor" xml:space="preserve">
+    <value>Molinillo</value>
+  </data>
+  <data name="Grinder Safety Key" xml:space="preserve">
+    <value>Llave de seguridad de molinillo</value>
+  </data>
+  <data name="Grinder Open Procedure" xml:space="preserve">
+    <value>Procedimiento abierta de molinillo</value>
+  </data>
+  <data name="Grinder Hydraulic unit" xml:space="preserve">
+    <value>Unidad hidráulica de molinillo</value>
+  </data>
+  <data name="Grinder Cooling Water" xml:space="preserve">
+    <value>Agua de enfriamiento de molinillo</value>
+  </data>
+  <data name="Antisticking System" xml:space="preserve">
+    <value>Sistema antiestronceado</value>
+  </data>
+  <data name="Process Group" xml:space="preserve">
+    <value>Grupo de procesos</value>
+  </data>
+  <data name="(1=LINE)" xml:space="preserve">
+    <value>(1 = línea)</value>
+  </data>
+  <data name="(1=WYE)" xml:space="preserve">
+    <value>(1 = Wye)</value>
+  </data>
+  <data name="(1=DELTA)" xml:space="preserve">
+    <value>(1 = Delta)</value>
+  </data>
+  <data name="GRINDER LOCAL+POWER DISCONNECT OPEN (BOTH)" xml:space="preserve">
+    <value>Grinder local+desconexión de potencia abierta (ambos)</value>
+  </data>
+  <data name="Grinder Disconnectors Closed" xml:space="preserve">
+    <value>Desconectores de molinillo cerrados</value>
+  </data>
+  <data name="GRINDER SAFETY KEY EXTRACTED FORM THE LOCK" xml:space="preserve">
+    <value>Llave de seguridad de la amoladora extraída del bloqueo</value>
+  </data>
+  <data name="GRINDER SAFETY KEY UNLOCK COMMAND ACTIVE" xml:space="preserve">
+    <value>Comando de desbloqueo de clave de seguridad de la amoladora activa</value>
+  </data>
+  <data name="GRINDER BLADES IN ROTATION" xml:space="preserve">
+    <value>Cuchillas de molinillo en rotación</value>
+  </data>
+  <data name="Grinder in Rotation" xml:space="preserve">
+    <value>Molinillo en rotación</value>
+  </data>
+  <data name="ANTISTICKING" xml:space="preserve">
+    <value>Antiestriquetado</value>
+  </data>
+  <data name="Antisticking System Not OK" xml:space="preserve">
+    <value>Sistema antiestriquetado no está bien</value>
+  </data>
+  <data name="INFO_ANTISTIKING_1" xml:space="preserve">
+    <value>Verifique el sistema de antistiquetos externos</value>
+  </data>
+  <data name="ANTISTICKING NOT OK" xml:space="preserve">
+    <value>Antisticking no está bien</value>
+  </data>
+  <data name="Antisticking OK (External Signal)" xml:space="preserve">
+    <value>Antisticking OK (señal externa)</value>
+  </data>
+  <data name="(1=ANTISTICKING OK FOR PROCESS)" xml:space="preserve">
+    <value>(1 = Antisticking OK para el proceso)</value>
+  </data>
+  <data name="*** GROUP FULL PRODUCTION ***" xml:space="preserve">
+    <value>Grupo de producción completa</value>
+  </data>
+  <data name="Calculated Current With No Material" xml:space="preserve">
+    <value>Corriente calculada sin material</value>
+  </data>
+  <data name="Total Downstream OK in Production" xml:space="preserve">
+    <value>Total aguas abajo ok en producción</value>
+  </data>
+  <data name="Total Downstream NOT OK in Production" xml:space="preserve">
+    <value>Total aguas abajo no está bien en la producción</value>
+  </data>
+  <data name="FEEDING CHANNEL" xml:space="preserve">
+    <value>Canal de alimentación</value>
+  </data>
+  <data name="Close Feeding Channel To Start" xml:space="preserve">
+    <value>Cerrar el canal de alimentación para comenzar</value>
+  </data>
+  <data name="_ESTOP_AREA_RESET_OK" xml:space="preserve">
+    <value>Restablecimiento del área de estopas OK</value>
+  </data>
+  <data name="_PLC_NEW_ALARM_SIREN_ON" xml:space="preserve">
+    <value>PLC nueva sirena de alarma en</value>
+  </data>
+  <data name="NEW_ALARM --&gt;SIREN ON (USED TO SHOW STOP-SIREN BUTTON ON HMI)" xml:space="preserve">
+    <value>Nueva alarma-&gt; Siren On (se usa para mostrar el botón Stop-Ad-Aden en HMI)</value>
+  </data>
+  <data name="INFO_LS_13" xml:space="preserve">
+    <value>Verifique la posición cerrada de la válvula y la presión en las tuberías</value>
+  </data>
+  <data name="INFO_OIL_SEAL_3" xml:space="preserve">
+    <value>Rellenar el aceite de sellado o el motor se detendrán en una hora</value>
   </data>
 </root>
