--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -2470,7 +2470,7 @@
     <value>מטחנה חיצונית</value>
   </data>
   <data name="WATCHDOG" xml:space="preserve">
-    <value>כֶּלֶב שְׁמִירָה</value>
+    <value>Watchdog</value>
   </data>
   <data name="INCREMENTAL WD COUNTER ( +1 EVERY 100 MS - ROLLOVER AT 30000 )" xml:space="preserve">
     <value>מונה Wd מצטבר (+1 כל 100 מילישיות - גלגול ב-30000)</value>
@@ -4592,5 +4592,128 @@
   </data>
   <data name="POSITION IN PRODUCTION" xml:space="preserve">
     <value>מיקום בייצור</value>
+  </data>
+  <data name="SYS - TV1 - TR Primary" xml:space="preserve">
+    <value>SYS - TV1 - TR ראשוני</value>
+  </data>
+  <data name="SYS - TV1 - TR Secondary" xml:space="preserve">
+    <value>SYS - TV1 - TR משני</value>
+  </data>
+  <data name="OVERLOAD ANALOG INPUT" xml:space="preserve">
+    <value>קלט אנלוגי עומס יתר</value>
+  </data>
+  <data name="OVERLOAD ANALOG OUTPUT" xml:space="preserve">
+    <value>פלט אנלוגי עומס יתר</value>
+  </data>
+  <data name="OVERLOAD 24V DC INVERTERs" xml:space="preserve">
+    <value>עומס יתר על 24 וולט DC ממירים</value>
+  </data>
+  <data name="OVERLOAD 24V DC UNDER ESTOP" xml:space="preserve">
+    <value>עומס יתר על 24 וולט DC תחת ESTOP</value>
+  </data>
+  <data name="CABINET COOLING OVERLOAD" xml:space="preserve">
+    <value>עומס יתר על קירור ארונות</value>
+  </data>
+  <data name="OVERLOAD 24V DC OF ESTOP CIRCUIT" xml:space="preserve">
+    <value>עומס יתר על 24 וולט DC של מעגל ESTOP</value>
+  </data>
+  <data name="Grinder Rotor" xml:space="preserve">
+    <value>רוטור מטחנה</value>
+  </data>
+  <data name="Grinder Safety Key" xml:space="preserve">
+    <value>מפתח בטיחות מטחנות</value>
+  </data>
+  <data name="Grinder Open Procedure" xml:space="preserve">
+    <value>מטחנת נוהל פתוח</value>
+  </data>
+  <data name="Grinder Hydraulic unit" xml:space="preserve">
+    <value>יחידה הידראולית מטחנה</value>
+  </data>
+  <data name="Grinder Cooling Water" xml:space="preserve">
+    <value>מטחנת מים קירור</value>
+  </data>
+  <data name="Antisticking System" xml:space="preserve">
+    <value>מערכת אנטי -סיפוק</value>
+  </data>
+  <data name="Process Group" xml:space="preserve">
+    <value>קבוצת תהליכים</value>
+  </data>
+  <data name="(1=LINE)" xml:space="preserve">
+    <value>(1 = קו)</value>
+  </data>
+  <data name="(1=WYE)" xml:space="preserve">
+    <value>(1 = wye)</value>
+  </data>
+  <data name="(1=DELTA)" xml:space="preserve">
+    <value>(1 = דלתא)</value>
+  </data>
+  <data name="GRINDER LOCAL+POWER DISCONNECT OPEN (BOTH)" xml:space="preserve">
+    <value>מטחנה מקומית+ניתוק כוח פתוח (שניהם)</value>
+  </data>
+  <data name="Grinder Disconnectors Closed" xml:space="preserve">
+    <value>ניתוק מטחנות נסגר</value>
+  </data>
+  <data name="GRINDER SAFETY KEY EXTRACTED FORM THE LOCK" xml:space="preserve">
+    <value>מפתח בטיחות מטחנה שחולץ מהמנעול</value>
+  </data>
+  <data name="GRINDER SAFETY KEY UNLOCK COMMAND ACTIVE" xml:space="preserve">
+    <value>מפתח הבטיחות של מטחנה פקודת נעילת פקודה פעילה</value>
+  </data>
+  <data name="GRINDER BLADES IN ROTATION" xml:space="preserve">
+    <value>להבי מטחנות בסיבוב</value>
+  </data>
+  <data name="Grinder in Rotation" xml:space="preserve">
+    <value>מטחנה בסיבוב</value>
+  </data>
+  <data name="ANTISTICKING" xml:space="preserve">
+    <value>אנטי -נטייה</value>
+  </data>
+  <data name="Antisticking System Not OK" xml:space="preserve">
+    <value>מערכת אנטי -נימוסים לא בסדר</value>
+  </data>
+  <data name="INFO_ANTISTIKING_1" xml:space="preserve">
+    <value>בדוק מערכת אנטי -חיצונית חיצונית</value>
+  </data>
+  <data name="ANTISTICKING NOT OK" xml:space="preserve">
+    <value>אנטי -תור לא בסדר</value>
+  </data>
+  <data name="Antisticking OK (External Signal)" xml:space="preserve">
+    <value>אנטי -קיים בסדר (אות חיצוני)</value>
+  </data>
+  <data name="(1=ANTISTICKING OK FOR PROCESS)" xml:space="preserve">
+    <value>(1 = אנטי -נטייה בסדר לתהליך)</value>
+  </data>
+  <data name="*** GROUP FULL PRODUCTION ***" xml:space="preserve">
+    <value>קבוצה הפקה מלאה</value>
+  </data>
+  <data name="Calculated Current With No Material" xml:space="preserve">
+    <value>זרם מחושב ללא חומר</value>
+  </data>
+  <data name="Total Downstream OK in Production" xml:space="preserve">
+    <value>סה"כ במורד הזרם בסדר בייצור</value>
+  </data>
+  <data name="Total Downstream NOT OK in Production" xml:space="preserve">
+    <value>בסך הכל במורד הזרם לא בסדר בייצור</value>
+  </data>
+  <data name="FEEDING CHANNEL" xml:space="preserve">
+    <value>ערוץ האכלה</value>
+  </data>
+  <data name="Close Feeding Channel To Start" xml:space="preserve">
+    <value>סגור את ערוץ האכלה כדי להתחיל</value>
+  </data>
+  <data name="_ESTOP_AREA_RESET_OK" xml:space="preserve">
+    <value>אזור Estop איפוס בסדר</value>
+  </data>
+  <data name="_PLC_NEW_ALARM_SIREN_ON" xml:space="preserve">
+    <value>Plc צפירת אזעקה חדשה ב</value>
+  </data>
+  <data name="NEW_ALARM --&gt;SIREN ON (USED TO SHOW STOP-SIREN BUTTON ON HMI)" xml:space="preserve">
+    <value>אזעקה חדשה-&gt; צפירה ב (שימשת להצגת כפתור Stop-Siren ב- HMI)</value>
+  </data>
+  <data name="INFO_LS_13" xml:space="preserve">
+    <value>בדוק את המיקום הסגור של השסתום ולחץ בצינורות</value>
+  </data>
+  <data name="INFO_OIL_SEAL_3" xml:space="preserve">
+    <value>מילוי שמן איטום או המנוע יופסקו תוך שעה</value>
   </data>
 </root>
