--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -996,7 +996,7 @@
     <comment>InfoText Message</comment>
   </data>
   <data name="INFO_GREASE_2" xml:space="preserve">
-    <value>Check Greasing System And Grease Flow Sensor. </value>
+    <value>Check Greasing System And Grease Flow Sensor.</value>
     <comment>InfoText Message</comment>
   </data>
   <data name="INFO_GREASE_3" xml:space="preserve">
@@ -4926,5 +4926,123 @@
   </data>
   <data name="POSITION IN PRODUCTION" xml:space="preserve">
     <value>Position In Production</value>
+  </data>
+  <data name="SYS - TV1 - TR Primary" xml:space="preserve">
+    <value>SYS - TV1 - TR Primary</value>
+  </data>
+  <data name="SYS - TV1 - TR Secondary" xml:space="preserve">
+    <value>SYS - TV1 - TR Secondary</value>
+  </data>
+  <data name="OVERLOAD ANALOG INPUT" xml:space="preserve">
+    <value>Overload Analog Input</value>
+  </data>
+  <data name="OVERLOAD ANALOG OUTPUT" xml:space="preserve">
+    <value>Overload Analog Output</value>
+  </data>
+  <data name="OVERLOAD 24V DC INVERTERs" xml:space="preserve">
+    <value>Overload 24V Dc Inverters</value>
+  </data>
+  <data name="OVERLOAD 24V DC UNDER ESTOP" xml:space="preserve">
+    <value>Overload 24V Dc Under Estop</value>
+  </data>
+  <data name="CABINET COOLING OVERLOAD" xml:space="preserve">
+    <value>Cabinet Cooling Overload</value>
+  </data>
+  <data name="OVERLOAD 24V DC OF ESTOP CIRCUIT" xml:space="preserve">
+    <value>Overload 24V Dc Of Estop Circuit</value>
+  </data>
+  <data name="Grinder Rotor" xml:space="preserve">
+    <value>Grinder Rotor</value>
+  </data>
+  <data name="Grinder Safety Key" xml:space="preserve">
+    <value>Grinder Safety Key</value>
+  </data>
+  <data name="Grinder Open Procedure" xml:space="preserve">
+    <value>Grinder Open Procedure</value>
+  </data>
+  <data name="Grinder Hydraulic unit" xml:space="preserve">
+    <value>Grinder Hydraulic Unit</value>
+  </data>
+  <data name="Grinder Cooling Water" xml:space="preserve">
+    <value>Grinder Cooling Water</value>
+  </data>
+  <data name="Antisticking System" xml:space="preserve">
+    <value>Antisticking System</value>
+  </data>
+  <data name="Process Group" xml:space="preserve">
+    <value>Process Group</value>
+  </data>
+  <data name="(1=LINE)" xml:space="preserve">
+    <value>(1=Line)</value>
+  </data>
+  <data name="(1=WYE)" xml:space="preserve">
+    <value>(1=Wye)</value>
+  </data>
+  <data name="(1=DELTA)" xml:space="preserve">
+    <value>(1=Delta)</value>
+  </data>
+  <data name="GRINDER LOCAL+POWER DISCONNECT OPEN (BOTH)" xml:space="preserve">
+    <value>Grinder Local+Power Disconnect Open (Both)</value>
+  </data>
+  <data name="Grinder Disconnectors Closed" xml:space="preserve">
+    <value>Grinder Disconnectors Closed</value>
+  </data>
+  <data name="GRINDER SAFETY KEY EXTRACTED FORM THE LOCK" xml:space="preserve">
+    <value>Grinder Safety Key Extracted From The Lock</value>
+  </data>
+  <data name="GRINDER SAFETY KEY UNLOCK COMMAND ACTIVE" xml:space="preserve">
+    <value>Grinder Safety Key Unlock Command Active</value>
+  </data>
+  <data name="GRINDER BLADES IN ROTATION" xml:space="preserve">
+    <value>Grinder Blades In Rotation</value>
+  </data>
+  <data name="Grinder in Rotation" xml:space="preserve">
+    <value>Grinder In Rotation</value>
+  </data>
+  <data name="ANTISTICKING" xml:space="preserve">
+    <value>Antisticking</value>
+  </data>
+  <data name="Antisticking System Not OK" xml:space="preserve">
+    <value>Antisticking System Not Ok</value>
+  </data>
+  <data name="INFO_ANTISTIKING_1" xml:space="preserve">
+    <value>Check External Antisticking System</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="ANTISTICKING NOT OK" xml:space="preserve">
+    <value>Antisticking Not Ok</value>
+  </data>
+  <data name="Antisticking OK (External Signal)" xml:space="preserve">
+    <value>Antisticking Ok (External Signal)</value>
+  </data>
+  <data name="(1=ANTISTICKING OK FOR PROCESS)" xml:space="preserve">
+    <value>(1=Antisticking Ok For Process)</value>
+  </data>
+  <data name="*** GROUP FULL PRODUCTION ***" xml:space="preserve">
+    <value>Group Full Production</value>
+  </data>
+  <data name="Calculated Current With No Material" xml:space="preserve">
+    <value>Calculated Current With No Material</value>
+  </data>
+  <data name="Total Downstream OK in Production" xml:space="preserve">
+    <value>Total Downstream Ok In Production</value>
+  </data>
+  <data name="Total Downstream NOT OK in Production" xml:space="preserve">
+    <value>Total Downstream Not Ok In Production</value>
+  </data>
+  <data name="FEEDING CHANNEL" xml:space="preserve">
+    <value>Feeding Channel</value>
+  </data>
+  <data name="Close Feeding Channel To Start" xml:space="preserve">
+    <value>Close Feeding Channel To Start</value>
+  </data>
+  <data name="_ESTOP_AREA_RESET_OK" xml:space="preserve">
+    <value>Estop Area Reset Ok</value>
+  </data>
+  <data name="_PLC_NEW_ALARM_SIREN_ON" xml:space="preserve">
+    <value>Plc New Alarm Siren On</value>
+  </data>
+  <data name="NEW_ALARM --&gt;SIREN ON (USED TO SHOW STOP-SIREN BUTTON ON HMI)" xml:space="preserve">
+    <value>New Alarm --&gt;Siren On (Used To Show Stop-Siren Button On Hmi)</value>
   </data>
 </root>
