--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -3241,7 +3241,7 @@
     <value>حماية المخرجات التناظرية</value>
   </data>
   <data name="BUTTONSPANEL" xml:space="preserve">
-    <value>بوتونات</value>
+    <value>لوحة الأزرار</value>
   </data>
   <data name="EXPORT TO CSV" xml:space="preserve">
     <value>التصدير إلى CSV</value>
@@ -4138,13 +4138,13 @@
     <value>أضف مجموعة</value>
   </data>
   <data name="PLANTCONTROL" xml:space="preserve">
-    <value>PlantControl</value>
+    <value>التحكم في النبات</value>
   </data>
   <data name="USAGETIME" xml:space="preserve">
     <value>وقت الاستخدام</value>
   </data>
   <data name="HIDEFAULTS" xml:space="preserve">
-    <value>HideFaults</value>
+    <value>إخفاء العيوب</value>
   </data>
   <data name="TORQUE" xml:space="preserve">
     <value>عزم الدوران</value>
