--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -3241,7 +3241,7 @@
     <value>Analoger Ausgänge Schutz</value>
   </data>
   <data name="BUTTONSPANEL" xml:space="preserve">
-    <value>Buttonspanel</value>
+    <value>Knöpfe Panel</value>
   </data>
   <data name="EXPORT TO CSV" xml:space="preserve">
     <value>Export zu CSV</value>
@@ -4138,13 +4138,13 @@
     <value>Gruppe hinzufügen</value>
   </data>
   <data name="PLANTCONTROL" xml:space="preserve">
-    <value>Plantcontrol</value>
+    <value>Pflanzenkontrolle</value>
   </data>
   <data name="USAGETIME" xml:space="preserve">
     <value>Nutzungszeit</value>
   </data>
   <data name="HIDEFAULTS" xml:space="preserve">
-    <value>HideFaults</value>
+    <value>Fehler verbergen</value>
   </data>
   <data name="TORQUE" xml:space="preserve">
     <value>Drehmoment</value>
