--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -3241,7 +3241,7 @@
     <value>Protección de salidas analógicas</value>
   </data>
   <data name="BUTTONSPANEL" xml:space="preserve">
-    <value>Butspanel</value>
+    <value>Panel de botones</value>
   </data>
   <data name="EXPORT TO CSV" xml:space="preserve">
     <value>Exportar a CSV</value>
@@ -4138,13 +4138,13 @@
     <value>Añadir grupo</value>
   </data>
   <data name="PLANTCONTROL" xml:space="preserve">
-    <value>Controlador de plantas</value>
+    <value>Control de plantas</value>
   </data>
   <data name="USAGETIME" xml:space="preserve">
     <value>Tiempo de uso</value>
   </data>
   <data name="HIDEFAULTS" xml:space="preserve">
-    <value>Hilera</value>
+    <value>Esconder fallas</value>
   </data>
   <data name="TORQUE" xml:space="preserve">
     <value>Esfuerzo de torsión</value>
