--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -4141,13 +4141,13 @@
     <value>הוסף קבוצה</value>
   </data>
   <data name="PLANTCONTROL" xml:space="preserve">
-    <value>PlantControl</value>
+    <value>בקרת צמחים</value>
   </data>
   <data name="USAGETIME" xml:space="preserve">
     <value>זמן שימוש</value>
   </data>
   <data name="HIDEFAULTS" xml:space="preserve">
-    <value>Hidefaults</value>
+    <value>הסתר תקלות</value>
   </data>
   <data name="TORQUE" xml:space="preserve">
     <value>עֲנָק</value>
