--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -3241,7 +3241,7 @@
     <value>Protezione Uscite Analogiche</value>
   </data>
   <data name="BUTTONSPANEL" xml:space="preserve">
-    <value>Pannello Pulsanti</value>
+    <value>Pannello pulsanti</value>
   </data>
   <data name="EXPORT TO CSV" xml:space="preserve">
     <value>Esporta In Csv</value>
@@ -4138,13 +4138,13 @@
     <value>Aggiungere gruppo</value>
   </data>
   <data name="PLANTCONTROL" xml:space="preserve">
-    <value>PlantControl</value>
+    <value>Controllo dell’impianto</value>
   </data>
   <data name="USAGETIME" xml:space="preserve">
     <value>Tempo di utilizzo</value>
   </data>
   <data name="HIDEFAULTS" xml:space="preserve">
-    <value>Hidefaults</value>
+    <value>Nascondere gli allarmi</value>
   </data>
   <data name="TORQUE" xml:space="preserve">
     <value>Coppia</value>
