--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -3274,7 +3274,7 @@
     <value>Proteção de saída analógica</value>
   </data>
   <data name="BUTTONSPANEL" xml:space="preserve">
-    <value>ButtonsPanel</value>
+    <value>Painel de botões</value>
   </data>
   <data name="EXPORT TO CSV" xml:space="preserve">
     <value>Exportar para CSV</value>
@@ -4141,13 +4141,13 @@
     <value>Adicionar grupo</value>
   </data>
   <data name="PLANTCONTROL" xml:space="preserve">
-    <value>PlantControl</value>
+    <value>Controle da planta</value>
   </data>
   <data name="USAGETIME" xml:space="preserve">
     <value>Tempo de uso</value>
   </data>
   <data name="HIDEFAULTS" xml:space="preserve">
-    <value>Hidefaults</value>
+    <value>Ocultar falhas</value>
   </data>
   <data name="TORQUE" xml:space="preserve">
     <value>Torque</value>
