--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -3563,7 +3563,7 @@
     <value>Analog Outputs Protection</value>
   </data>
   <data name="BUTTONSPANEL" xml:space="preserve">
-    <value>Buttonspanel</value>
+    <value>Buttons Panel</value>
   </data>
   <data name="EXPORT TO CSV" xml:space="preserve">
     <value>Export To Csv</value>
@@ -4058,7 +4058,7 @@
     <value>No Access Level</value>
   </data>
   <data name="SIMULATED" xml:space="preserve">
-    <value>Simulated</value>
+    <value>SIMULATED</value>
   </data>
   <data name="ABOUT" xml:space="preserve">
     <value>About</value>
@@ -4475,13 +4475,13 @@
     <value>Add Group</value>
   </data>
   <data name="PLANTCONTROL" xml:space="preserve">
-    <value>Plantcontrol</value>
+    <value>Plant Control</value>
   </data>
   <data name="USAGETIME" xml:space="preserve">
-    <value>Usagetime</value>
+    <value>Usage Time</value>
   </data>
   <data name="HIDEFAULTS" xml:space="preserve">
-    <value>Hidefaults</value>
+    <value>Hide Faults</value>
   </data>
   <data name="TORQUE" xml:space="preserve">
     <value>Torque</value>
@@ -4502,7 +4502,7 @@
     <value>Recipe Name</value>
   </data>
   <data name="SEND THE FOLLOWING RECIPE TO PLC?" xml:space="preserve">
-    <value>Send The Following Recipe To Plc?</value>
+    <value>Send The Following Recipe To PLC?</value>
   </data>
   <data name="OPEN RECIPE" xml:space="preserve">
     <value>Open Recipe</value>
@@ -4790,7 +4790,7 @@
     <value>In Pause Time Phase</value>
   </data>
   <data name="MOTOR TORQUE TRANSDUCER BROKEN WIRE" xml:space="preserve">
-    <value>Motor Torque Transducer Broken Wire</value>
+    <value>MOTOR TORQUE TRANSDUCER BROKEN WIRE</value>
   </data>
   <data name="MOTOR TORQUE BELOW MINIMUM RANGE LIMIT" xml:space="preserve">
     <value>Motor Torque Below Minimum Range Limit</value>
@@ -5044,5 +5044,8 @@
   </data>
   <data name="NEW_ALARM --&gt;SIREN ON (USED TO SHOW STOP-SIREN BUTTON ON HMI)" xml:space="preserve">
     <value>New Alarm --&gt;Siren On (Used To Show Stop-Siren Button On Hmi)</value>
+  </data>
+  <data name="FILTER PRESS MAXIMUM TORQUE" xml:space="preserve">
+    <value>FILTER PRESS MAXIMUM TORQUE</value>
   </data>
 </root>
