--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -3280,7 +3280,7 @@
     <value>Protecția ieșirilor analogice</value>
   </data>
   <data name="BUTTONSPANEL" xml:space="preserve">
-    <value>Buttonspanel</value>
+    <value>Panoul butoanelor</value>
   </data>
   <data name="EXPORT TO CSV" xml:space="preserve">
     <value>Exportați la CSV</value>
@@ -4147,13 +4147,13 @@
     <value>Adăugare grup</value>
   </data>
   <data name="PLANTCONTROL" xml:space="preserve">
-    <value>Plantcontrol</value>
+    <value>Controlul plantelor</value>
   </data>
   <data name="USAGETIME" xml:space="preserve">
-    <value>Usagetime</value>
+    <value>Timp de utilizare</value>
   </data>
   <data name="HIDEFAULTS" xml:space="preserve">
-    <value>HideFaults</value>
+    <value>Ascunde defecțiuni</value>
   </data>
   <data name="TORQUE" xml:space="preserve">
     <value>Cuplu</value>
