--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -3241,7 +3241,7 @@
     <value>模拟输出保护</value>
   </data>
   <data name="BUTTONSPANEL" xml:space="preserve">
-    <value>纽扣</value>
+    <value>按钮面板</value>
   </data>
   <data name="EXPORT TO CSV" xml:space="preserve">
     <value>导出到CSV</value>
@@ -4138,13 +4138,13 @@
     <value>添加组</value>
   </data>
   <data name="PLANTCONTROL" xml:space="preserve">
-    <value>PlantControl</value>
+    <value>植物控制</value>
   </data>
   <data name="USAGETIME" xml:space="preserve">
-    <value>USAGETIME</value>
+    <value>使用时间</value>
   </data>
   <data name="HIDEFAULTS" xml:space="preserve">
-    <value>hidefaults</value>
+    <value>隐藏故障</value>
   </data>
   <data name="TORQUE" xml:space="preserve">
     <value>扭矩</value>
